--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A responsive video player for Nextcloud using a skinned version of Video.js.",
   "private": true,
   "dependencies": {
-    "video.js": "^7.4.1"
+    "video.js": "^7.4.1",
+    "videojs-vr": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
